add_subdirectory (append)
add_subdirectory (at)
add_subdirectory (back)
add_subdirectory (begin)
add_subdirectory (capacity)
add_subdirectory (cbegin)
add_subdirectory (cend)
add_subdirectory (crbegin)
add_subdirectory (crend)
add_subdirectory (end)
add_subdirectory (front)
add_subdirectory (inlinable)
add_subdirectory (inline_capacity)
add_subdirectory (inlined)
add_subdirectory (rbegin)
add_subdirectory (rend)
